# streg

./: README.md
src/: CMakeLists.txt
src/apps/: streg.cpp
src/lib/: Aligner.cpp  Aligner.hpp  Definitions.hpp  FeatureExtractor.cpp  FeatureExtractor.hpp  GaborBank.cpp  GaborBank.hpp  Image.cpp  Image.hpp  LightGaborBank.cpp  LightGaborBank.hpp  MachineLearning.cpp  MachineLearning.hpp  Models.cpp  Models.hpp  OpticalFlow.cpp  OpticalFlow.hpp  RegFw.hpp  Utility.cpp  Utility.hpp
